--- a/cv-deploy/cv_TungCs_en.html
+++ b/cv-deploy/cv_TungCs_en.html
@@ -320,7 +320,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="./avt.jpg" alt="Cao Son Tung" class="profile-image">
+        <img src="/avt.jpg" alt="Cao Son Tung" class="profile-image">
         <div class="contact-info">
             <h1>Cao Son Tung</h1>
             <p><i class="fas fa-birthday-cake"></i> Birthday: 24/09/1995</p>
