--- a/cv-deploy/cv_TungCs_en.html
+++ b/cv-deploy/cv_TungCs_en.html
@@ -34,6 +34,7 @@
             max-width: 1200px;
             margin: 0 auto;
             background: linear-gradient(135deg, #f8fafc 0%, #ffffff 100%);
+            min-height: 100vh;
         }
 
         .header {
@@ -48,6 +49,7 @@
             position: relative;
             overflow: hidden;
             border: 1px solid var(--border-color);
+            transition: all 0.3s ease;
         }
 
         .header::before {
@@ -57,7 +59,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, var(--primary-color), var(--accent-color));
+            background: linear-gradient(90deg, var(--primary-color), var(--primary-dark));
         }
 
         .profile-image {
@@ -109,23 +111,27 @@
         }
 
         h1 {
-            color: #2563eb;
+            color: var(--primary-color);
             margin-bottom: 0.5rem;
             font-size: 3.2rem;
             font-weight: 700;
             letter-spacing: -0.025em;
+            line-height: 1.2;
+            transition: all 0.3s ease;
         }
 
         .job-title {
             color: #64748b;
             font-size: 1.5rem;
             font-weight: 500;
+            transition: all 0.3s ease;
         }
 
         .contact-details {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 1.5rem;
+            transition: all 0.3s ease;
         }
 
         .contact-details p {
@@ -135,12 +141,14 @@
             align-items: center;
             gap: 0.75rem;
             color: #475569;
+            transition: all 0.3s ease;
         }
 
         .contact-details i {
-            color: #2563eb;
+            color: var(--primary-color);
             font-size: 1.25rem;
             width: auto;
+            transition: all 0.3s ease;
         }
 
         h2 {
@@ -167,11 +175,13 @@
         }
 
         .section {
-            margin-bottom: 3rem;
-            background: #fff;
-            padding: 2rem;
+            background: #ffffff;
+            padding: 2.5rem;
             border-radius: 1rem;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            margin-bottom: 2rem;
+            box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1);
+            border: 1px solid var(--border-color);
+            transition: all 0.3s ease;
         }
 
         .brief-intro {
@@ -287,43 +297,66 @@
             color: var(--primary-dark);
         }
 
-        @media print {
+        /* Extra large devices (large desktops, 1400px and up) */
+        @media (min-width: 1400px) {
             body {
-                padding: 1rem;
-                background: white;
-            }
-
-            .experience-item:hover, .project-item:hover,
-            .skill-category:hover {
-                transform: none;
-                box-shadow: none;
+                padding: 3rem;
             }
 
             .header {
-                box-shadow: none;
+                padding: 4rem;
+                gap: 4rem;
             }
 
             .profile-image {
-                box-shadow: none;
+                width: 260px;
+                height: 260px;
             }
 
-            .section {
-                box-shadow: none;
+            h1 {
+                font-size: 3.5rem;
+            }
+
+            .job-title {
+                font-size: 1.75rem;
+            }
+
+            .contact-details p {
+                font-size: 1.2rem;
             }
         }
 
+        /* Large devices (desktops, 1200px and up) */
         @media (max-width: 1200px) {
             body {
-                padding: 1.5rem;
-                max-width: 100%;
+                padding: 2rem;
             }
 
-            .skills-grid {
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            .header {
+                padding: 2.5rem;
+                gap: 2.5rem;
+            }
+
+            .profile-image {
+                width: 200px;
+                height: 200px;
+            }
+
+            h1 {
+                font-size: 2.8rem;
+            }
+
+            .job-title {
+                font-size: 1.4rem;
             }
         }
 
+        /* Medium devices (tablets, 992px and up) */
         @media (max-width: 992px) {
+            body {
+                padding: 1.5rem;
+            }
+
             .header {
                 padding: 2rem;
                 gap: 2rem;
@@ -339,31 +372,59 @@
             }
 
             .job-title {
-                font-size: 1.25rem;
+                font-size: 1.3rem;
             }
 
             .contact-details {
                 grid-template-columns: 1fr;
+                gap: 1rem;
+            }
+
+            .contact-details p {
+                font-size: 1rem;
+            }
+
+            .section {
+                padding: 2rem;
             }
         }
 
+        /* Small devices (landscape phones, 768px and up) */
         @media (max-width: 768px) {
+            body {
+                padding: 1rem;
+            }
+
             .header {
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
                 padding: 2rem;
+                gap: 1.5rem;
             }
 
             .profile-image {
                 width: 160px;
                 height: 160px;
-                margin-bottom: 1rem;
+                margin-bottom: 0.5rem;
             }
 
             .contact-info {
                 width: 100%;
                 padding-top: 0;
+            }
+
+            .contact-info-header {
+                padding-bottom: 1rem;
+                margin-bottom: 1rem;
+            }
+
+            h1 {
+                font-size: 2.2rem;
+            }
+
+            .job-title {
+                font-size: 1.2rem;
             }
 
             .contact-details {
@@ -372,12 +433,25 @@
 
             .contact-details p {
                 justify-content: center;
+                font-size: 0.95rem;
+            }
+
+            .section {
+                padding: 1.5rem;
+                margin-bottom: 1.5rem;
             }
         }
 
+        /* Extra small devices (phones, 576px and down) */
         @media (max-width: 576px) {
+            body {
+                padding: 0.75rem;
+            }
+
             .header {
                 padding: 1.5rem;
+                border-radius: 1rem;
+                gap: 1rem;
             }
 
             .profile-image {
@@ -395,10 +469,83 @@
 
             .contact-details {
                 grid-template-columns: 1fr;
+                gap: 0.75rem;
             }
 
             .contact-details p {
-                font-size: 1rem;
+                font-size: 0.9rem;
+            }
+
+            .contact-details i {
+                font-size: 1.1rem;
+            }
+
+            .section {
+                padding: 1.25rem;
+                margin-bottom: 1rem;
+                border-radius: 0.75rem;
+            }
+        }
+
+        /* Dark mode support */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background: #0f172a;
+                color: #e2e8f0;
+            }
+
+            .header, .section {
+                background: #1e293b;
+                border-color: #334155;
+            }
+
+            h1 {
+                color: #60a5fa;
+            }
+
+            .job-title {
+                color: #94a3b8;
+            }
+
+            .contact-details p {
+                color: #cbd5e1;
+            }
+
+            .contact-details i {
+                color: #60a5fa;
+            }
+        }
+
+        /* Print styles */
+        @media print {
+            body {
+                padding: 0;
+                background: white;
+            }
+
+            .header {
+                box-shadow: none;
+                border: none;
+                padding: 2rem 0;
+            }
+
+            .profile-image {
+                box-shadow: none;
+            }
+
+            .section {
+                box-shadow: none;
+                border: none;
+                padding: 1.5rem 0;
+                break-inside: avoid;
+            }
+
+            h1 {
+                color: #000;
+            }
+
+            .contact-details i {
+                color: #000;
             }
         }
     </style>
