--- a/cv-deploy/cv_TungCs_en.html
+++ b/cv-deploy/cv_TungCs_en.html
@@ -556,7 +556,7 @@
         <div class="contact-info">
             <div class="contact-info-header">
                 <h1>Cao Son Tung</h1>
-                <div class="job-title">Senior Frontend Developer</div>
+                <div class="job-title">Middle Web Developer</div>
             </div>
             
             <div class="contact-details">
